OpenAi Whipser is now working

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
-GOOGLE_KEY = AIzaSyBmJ4sLBCdirLz3AqUQ0kW0yRSDaDsmdT4
+# GOOGLE_KEY = AIzaSyBmJ4sLBCdirLz3AqUQ0kW0yRSDaDsmdT4
+GOOGLE_APPLICATION_CREDENTIALS = "C:\Users\celin\Downloads\glass-tide-404200-4528c75d7dd3.json"
